@@ -8,16 +8,18 @@ import java.util.List;
 import java.util.Map;
 
 public record Model(Mesh[] meshes,
-                    Map<String, Bone> boneMap,
                     Map<String, Matrix4f> bone_transforms,
+                    Map<String, Integer> bone_indices,
+                    Map<Integer, BoneBindPose> bind_poses,
                     List<Texture> textures,
                     int root_index)
 {
     public static Model fromBasicMesh(Mesh mesh)
     {
         return new Model(new Mesh[]{ mesh },
-            Map.of(Bone.IDENTITY_BONE_NAME, mesh.bone()),
-            Map.of(Bone.IDENTITY_BONE_NAME, new Matrix4f()),
+            Map.of(BoneOffset.IDENTITY_BONE_NAME, new Matrix4f()),
+            Collections.emptyMap(),
+            Collections.emptyMap(),
             Collections.emptyList(),
             0);
     }
